2014-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Use same call to
	info_search_internal for both regex and non-regex searches.

	* info/t/inc-sea-forward-nonregex.sh: New test.

2014-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Remove unused argument.  When
	searching backward again, position one byte before current match.
	(info_search_internal, info_search_in_node_internal): Always start
	search at argument given, not at point.  Callers updated.

	* info/t/inc-sea-forward.sh: New test.
	* info/t/search.info: Remove spaces between two matches and more
	matches after target to increase chance of ending up in the wrong
	place.

2014-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_window_1): Check if the next search
	match starts immediately after the last one.

2014-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes): Error message if --node used
	without a filename being specified.
	* info/t/node-no-file.sh: New test.

2014-08-15  Gavin Smith  <gavinsmith0123@gmail.com>
	
	* info/session.c (match_in_match_list): Arguments changed.
	(info_search_in_node_internal): Function declared static.
	Arguments changed.  Remove node name search.
	(info_search_internal): Rewritten to have single call to
	info_search_in_node_internal.
	(info_target_search_node): Removed.
	(info_select_reference): Call updated.

	* info/footnotes.c (make_footnotes_node): Only search until end of
	node.

2014-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (regexp_escape_string): New function.
	(regexp_search): New argument controlling whether to search for string
	literally.  Callers updated.
	* info/session.c (info_search_in_node_internal): Call regexp_search
	function for literal searches.
	* info/footnotes.c (make_footnotes_node): Use strstr instead of
	info_search_in_node_internal.
